[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pykeycloak"
version = "0.3.0"
description = "A Simple wrapper for python-keycloak. Mainly used for simplifying keycloak interactions in Jupyter Notebooks."
authors = [
  { name="AR2C", email="ar2c-dl@cse-cst.gc.ca" },
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["DALTON", "AR2C", "Python", "Widget", "Notebook"]
classifiers = [
    'Intended Audience :: Science/Research', 
    'Operating System :: POSIX :: Linux',        
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11'
]
dependencies = [
    "python-keycloak>=3.3.0",
    "filelock>=3.10.6",
    "pydantic>=2.6.3"
]

[project.urls]
"Homepage" = "https://github.com/cse-cst/pykeycloak"